<resources>
    <string name="app_name">FREXT</string>
    <string name="title_activity_test">FREXT</string>
    <string name="str_text_according_tempo">Text According to Tempo</string>
    <string name="str_reproduction_time">Reproduction Time\n(in milliseconds)</string>
    <string name="str_loop_mode">Loop Mode</string>
    <string name="str_start_loop">Start Loop</string>
    <string name="str_end_loop">End Loop</string>
    <string name="facebook_app_id">1032065650194225</string>

    <string name="searchhidenText">Choose a song</string>
    <string name="action_settings">Settings</string>
    <string name="player_error">Error initializing YouTube player</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
    <string name="connect">Device CONNECTED!</string>
    <string name="disconnect">Device not CONNECTED!</string>

    <string name="string1">6S F0</string>
    <string name="string2">5S F0</string>
    <string name="string3">4S F0</string>
    <string name="string4">3S F0</string>
    <string name="string5">2S F0</string>
    <string name="string6">1S F0</string>


    <string name="tuningPlane">Tunign Plane</string>

    <string name="error_buffer">Error from audio recording! Cannot find a working input sample rate.</string>
    <string name="error_init">Audio recorder not initialised! Maybe the selected input source is not available, or a working input sample rate could not be found.</string>
    <string name="copied_clip">Data copied to clipboard</string>
    <string name="screen_on">Keep screen on</string>
    <string name="screen_off">Don\'t keep screen on</string>
    <string name="sample_rate">Sample rate: %d samples/sec</string>
    <string name="filter">filter</string>
    <string name="zoom">zoom</string>
    <string name="lock">lock</string>
    <string name="display">screen</string>
    <string name="strobe">strobe</string>
    <string name="downsample">downsample</string>
    <string name="multiple">multiple</string>

    <string-array name="arr_left_nav_list">
        <item >Points</item>
        <item >Instruction Video</item>
        <item >Leave a Comment</item>
        <item >Like and Share</item>
        <item >Sign Out</item>
    </string-array>


    <!--<string name="app_name">ShareIt</string>-->
    <string name="main_page_text">Share It! App</string>
    <string name="likeable_image">Likeable image</string>
    <string name="share_menu_title">Share</string>

</resources>
